--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,9 @@ dependencies {
     compile 'com.sparkjava:spark-core:2.7.1'
     compile 'org.apache.logging.log4j:log4j-api:2.10.0'
     compile 'org.apache.logging.log4j:log4j-core:2.10.0'
+    compile 'com.google.code.gson:gson:2.8.2'
+    compile 'org.mongodb:mongodb-driver:3.6.2'
+    compile 'org.apache.commons:commons-text:1.2'
 
     testCompile 'junit:junit:4.12'
     testCompile 'io.rest-assured:rest-assured:3.0.6'
