--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,20 @@
 version: '3'
 services:
-  db:
-    image: 'mongo'
-    networks:
-      net:
-        ipv4_address: 172.16.238.10
   app:
     build: .
     ports:
       - '8080:8080'
     networks:
       - net
+    depends_on:
+      - db
+  db:
+    image: 'mongo'
+    networks:
+      net:
+        ipv4_address: 172.16.238.10
+    volumes:
+      - './data/db:/data/db'
 networks:
   net:
     driver: bridge
